# ha-frameo-control-addon

./: .gitignore  API.md  CHANGELOG.md  CLI.md  Dockerfile  EXAMPLES.md  MANIFEST.in  PACKAGE-SETUP-COMPLETE.md  PACKAGE-STRUCTURE.md  PUBLISHING.md  README.md  WIFI.md  app.py  build-package.sh  cli-requirements.txt  docker-compose.yml  frameo-cli.py  install-cli.sh  nginx.conf  openapi.yaml  pyproject.toml  quick-start.sh  requirements.txt  serve-docs.sh  test-package.py
.github/: copilot-instructions.md  copilot-prompts.md
docs/: README.md  home.html  index.html  redoc.html
frameo_control/: README.md
src/frameo_control/: __init__.py  api.py  cli.py
